# PromptSpec

./: .gitignore  README.md  SPECIFICATION.md
.github/workflows/: ci.yml  publish.yml
python/: README.md  example.py  example_prompts.yaml  pyproject.toml  setup.py
python/promptspec/: __init__.py
python/promptspec/core/: __init__.py  prompt_manager.py  prompt_template.py
python/promptspec/exceptions/: __init__.py  prompt_exceptions.py
python/promptspec/models/: __init__.py  llm_parameters.py  placeholder_definition.py  prompt_collection.py  prompt_specification.py
python/tests/: test_promptspec.py
src/: PromptSpec.csproj  PromptSpec.sln  README-NuGet.md  templates.yaml
src/Core/: PromptManager.cs  PromptTemplate.cs
src/Exceptions/: PromptExceptions.cs
src/Models/: LLMParameters.cs  PlaceholderDefinition.cs  PromptCollection.cs  PromptSpecification.cs
test/: PromptManagerTests.cs  PromptSpec.Tests.csproj  PromptTemplateTests.cs
